<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.user.generate.GenerateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="?attr/homeAsUpIndicator"
                app:tint="@color/gray" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/gray"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:text="@string/generate_gender_title"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="10dp"
                android:background="@drawable/spinner_border"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_down"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="24dp"
                app:tint="@color/gray" />

        </FrameLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            android:text="@string/generate_nationality_title"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:id="@+id/nationality_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="10dp"
                android:background="@drawable/spinner_border"/>

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_down"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="24dp"
                app:tint="@color/gray" />

        </FrameLayout>

    </LinearLayout>

    <Button
        android:id="@+id/generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/generate_button"
        android:textAllCaps="true"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/gray"
        android:layout_alignParentBottom="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

</RelativeLayout>