<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp">

    <ImageView
        android:id="@+id/options"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:layout_gravity="top|end"
        app:srcCompat="@drawable/kebab_menu"
        app:tint="@color/gray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/profilepic"
                android:scaleType="centerCrop"
                android:contentDescription="Profile picture"/>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usercard_name"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/usercard_phone"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ru"
                        android:scaleType="centerCrop"
                        android:contentDescription="Nationality image" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/usercard_country"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>